--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/ChristopherCaysido/Book-Directory-Project/issues"
   },
-  "homepage": "https://github.com/ChristopherCaysido/Book-Directory-Project#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "homepage": "https://github.com/ChristopherCaysido/Book-Directory-Project#readme"
 }
